Pypc Changelog
==============

Here you can see the full list of changes between each Pypc release.

Version 0.1.3
-------------

- Generates setup.py
- Code is much cleaner, code builds recursively
- Added html template files
- Fixing nosetests
- Removing wsgiref dependency (py3.4)
- README rst
- 0.1.35, fixed rel imports
- 0.1.37, fix header
- 0.1.38, add manifest, allow init w/ proj name (not only paths)
- 0.1.39, added minimalist mode (only setup.py, skips virtualenv)
-- added pypc -V version
-- added --fs pluggable json fs template (raises NotImplementedError)

Version 0.1.2
-------------

- Travis ci, Added lint requirements
- Virtualenv setup + installation
- Test case scaffolding
- Pip install dependencies
- Requirements.txt

Version 0.1.1
-------------

Scaffolds an module with empty placeholder files

Version 0.1
------------

First public preview release.