@@ -5,7 +5,6 @@ import os
 setup(
     name='{{ name }}',
     version='{{ version }}',
-    
     url='{{ url }}',
     author='{{ author }}',
     author_email='{{ email }}',
@@ -20,11 +19,9 @@ setup(
     scripts=[
         ],
     classifiers=[
-    {% for c in classifiers %}
-        '{{ c }}',
-    {% endfor %}
-        ],
+        {% for c in classifiers %}'{{ c }}',
+        {% endfor %}],
     description={{ desc }},
-    long_description=open(os.path.join(os.path.dirname(__file__), 'README.md')).read(),
+    long_description=open(os.path.join(os.path.dirname(__file__), '{{ readme }}')).read(),
 )
 
