@@ -1,5 +1,5 @@
 [tox]
-envlist = docs, py26, py27, pypy, py33, py34
+envlist = docs, py27, pypy, py34
 
 [flake8]
 # E128 continuation line under-indented for visual indent
